Apply Mica material to toolbars